--- a/projects/duz/dominion/Makefile
+++ b/projects/duz/dominion/Makefile
@@ -24,58 +24,65 @@ testAll: dominion.o testSuite.c
 interface.o: interface.h interface.c
 	gcc -c interface.c -g  $(CFLAGS)
 
-runtests: testDrawCard 
+runtests: testDrawCard
 	./testDrawCard &> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
 unittests: unittest1.c unittest2.c unittest3.c unittest4.c dominion.o rngs.o
-	echo "unittest1.c:" >> unittestresult.out 
+	echo "unittest1.c:" >> unittestresult.out
 	gcc  -o unittest1 -g  unittest1.c dominion.o rngs.o $(CFLAGS)
 	./unittest1 >> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
-	echo "unittest2.c:" >> unittestresult.out 
+	echo "unittest2.c:" >> unittestresult.out
 	gcc  -o unittest2 -g  unittest2.c dominion.o rngs.o $(CFLAGS)
 	./unittest2 >> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
-	echo "unittest3.c:" >> unittestresult.out 
+	echo "unittest3.c:" >> unittestresult.out
 	gcc  -o unittest3 -g  unittest3.c dominion.o rngs.o $(CFLAGS)
 	./unittest3 >> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
-	echo "unittest4.c:" >> unittestresult.out 
+	echo "unittest4.c:" >> unittestresult.out
 	gcc  -o unittest4 -g  unittest4.c dominion.o rngs.o $(CFLAGS)
 	./unittest4 >> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
-	echo "cardtest1.c:" >> unittestresult.out 
+	echo "cardtest1.c:" >> unittestresult.out
 	gcc  -o cardtest1 -g  cardtest1.c dominion.o rngs.o $(CFLAGS)
 	./cardtest1 >> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
-	echo "cardtest2.c:" >> unittestresult.out 
+	echo "cardtest2.c:" >> unittestresult.out
 	gcc  -o cardtest2 -g  cardtest2.c dominion.o rngs.o $(CFLAGS)
 	./cardtest2 >> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
-	echo "cardtest3.c:" >> unittestresult.out 
+	echo "cardtest3.c:" >> unittestresult.out
 	gcc  -o cardtest3 -g  cardtest3.c dominion.o rngs.o $(CFLAGS)
 	./cardtest3 >> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
-	echo "cardtest4.c:" >> unittestresult.out 
+	echo "cardtest4.c:" >> unittestresult.out
 	gcc  -o cardtest4 -g  cardtest4.c dominion.o rngs.o $(CFLAGS)
 	./cardtest4 >> unittestresult.out
 	gcov dominion.c >> unittestresult.out
+	cat dominion.c.gcov >> unittestresult.out
+
+randomtestcard1.out: dominion.o rngs.o
+	echo "randomtestcard1.c:" >> randomtestcard1.out
+	gcc  -o randomtestcard1 -g  randomtestcard1.c dominion.o rngs.o $(CFLAGS)
+	./randomtestcard1 >> randomtestcard1.out
+	gcov dominion.c >> .out
 	cat dominion.c.gcov >> unittestresult.out
 
 player: player.c interface.o
@@ -84,6 +91,7 @@ player: player.c interface.o
 all: playdom player testDrawCard testBuyCard badTestDrawCard
 
 clean:
-	rm -rf *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe badTestDrawCard *.dSYM 
+	rm -rf *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe badTestDrawCard *.dSYM
 	rm -f unittest1 unittest2 unittest3 unittest4
 	rm -f cardtest1 cardtest2 cardtest3 cardtest4
+	rm -f randomtestcard1 
