Assignment 4 init version

--- a/projects/duz/dominion/Makefile
+++ b/projects/duz/dominion/Makefile
@@ -82,8 +82,22 @@ randomtestcard1.out: dominion.o rngs.o
 	echo "randomtestcard1.c:" >> randomtestcard1.out
 	gcc  -o randomtestcard1 -g  randomtestcard1.c dominion.o rngs.o $(CFLAGS)
 	./randomtestcard1 >> randomtestcard1.out
-	gcov dominion.c >> .out
-	cat dominion.c.gcov >> unittestresult.out
+	gcov dominion.c >> randomtestcard1.out
+	cat dominion.c.gcov >> randomtestcard1.out
+
+randomtestcard2.out: dominion.o rngs.o
+	echo "randomtestcard2.c:" >> randomtestcard2.out
+	gcc  -o randomtestcard2 -g  randomtestcard2.c dominion.o rngs.o $(CFLAGS)
+	./randomtestcard2 >> randomtestcard2.out
+	gcov dominion.c >> randomtestcard2.out
+	cat dominion.c.gcov >> randomtestcard2.out
+
+randomtestadventurer.out: dominion.o rngs.o
+	echo "randomtestadventurer.c:" >> randomtestadventurer.out
+	gcc  -o randomtestadventurer -g  randomtestadventurer.c dominion.o rngs.o $(CFLAGS)
+	./randomtestadventurer >> randomtestadventurer.out
+	gcov dominion.c >> randomtestadventurer.out
+	cat dominion.c.gcov >> randomtestadventurer.out
 
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
@@ -94,4 +108,4 @@ clean:
 	rm -rf *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe badTestDrawCard *.dSYM
 	rm -f unittest1 unittest2 unittest3 unittest4
 	rm -f cardtest1 cardtest2 cardtest3 cardtest4
-	rm -f randomtestcard1 
+	rm -f randomtestcard1 randomtestcard2 randomtestadventurer
